apps/servarr/radarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  serviceName: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: radarr
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 7878
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 360
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 35m
              memory: 392Mi
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
            readOnlyRootFilesystem: false
      securityContext:
        fsGroup: 1000
      volumes:
        - name: run
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
