apps/servarr/radarr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 7878
      targetPort: http
  selector:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
