apps/servarr/radarr/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-api
spec:
  rules:
    - matches:
        - headers:
            - name: X-Api-Key
              type: RegularExpression
              value: .+
      backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-health
spec:
  rules:
    - matches:
        - path:
            type: Exact
            value: /ping
      backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
