apps/servarr/radarr/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: bazarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: seerr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: maintainerr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: https
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  policyTypes:
    - Ingress
